@@ -3,6 +3,11 @@
 	Backported from mainline
 	2013-01-23  Jakub Jelinek  <jakub@redhat.com>
 
+	PR fortran/56052
+	* gfortran.dg/gomp/pr56052.f90: New test.
+
+	2013-01-23  Jakub Jelinek  <jakub@redhat.com>
+
 	PR target/49069
 	* gcc.dg/pr49069.c: New test.
 
